[project]
name = "docker_mlflow"
version = "0.2.0"
description = ""
authors = [{ name = "Ilia Novikov", email = "nov.ilucha@yandex.ru" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "mlflow[databricks] (>=3.5.0rc0,<3.6.0)",
  "psycopg2-binary (>=2.9.0,<2.10.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
