[project]
name = "docker_mlflow"
version = "0.2.0"
description = ""
authors = [{ name = "Ilia Novikov", email = "nov.ilucha@yandex.ru" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "mlflow (==3.8.1)",
  "psycopg2-binary (>=2.9.10,<2.9.12)",
  "boto3 (>=1.42.18,<2.0.0)",
  "botocore (>=1.42.18,<2.0.0)",
  "aiohttp (<4)",
  "flask-wtf (<2)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
