[project]
name = "sql-initer"
version = "0.2.0"
description = ""
authors = [{ name = "Ilia Novikov", email = "nov.ilucha@yandex.ru" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "psycopg2-binary (>=2.9.0,<2.10.0)",
  "sqlalchemy (>=2.0.36,<2.1.0)",
  "pydantic (>=2.12.0,<2.13.0)",
  "pydantic-settings (>=2.11.0,<2.12.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
